[package]
name = "routerify-websocket"
version = "1.0.0"
description = "The websocket support for the Routerify library."
homepage = "https://github.com/routerify/routerify-websocket"
repository = "https://github.com/routerify/routerify-websocket"
keywords = ["routerify", "hyper-rs", "hyper", "websocket", "ws"]
categories = ["asynchronous", "web-programming", "web-programming::websocket"]
authors = ["Rousan Ali <hello@rousan.io>"]
readme = "README.md"
license = "MIT"
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
features = ["all"]

[features]
default = []
all = ["json"]
json = ["serde", "serde_json"]

[dependencies]
log = "0.4"
derive_more = "0.99"
routerify = "2.0.1"
hyper = { version = "0.14.7", features = ["full"] }
headers = "0.3.4"
tokio-tungstenite = { version = "0.14" }
futures = { version = "0.3", default-features = false }
tokio = { version = "1", features = ["rt"] }

serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

